sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:19: error: ';' expected but 'while' found.
  } while(gap >= 1 || swapped)
    ^AlgCombSort:25: error: 'while' expected but '}' found.
} 
^AlgCombSort:28: error: Unmatched closing brace '}' ignored here
}
^